--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
     
     <section id="about">
         <h2> About </h2>
-        <p> I'm a student of Bachelor of Science in Information Technology at St. Dominic College of Asia. </p>
+        <p> I am a student of Bachelor of Science in Information Technology at St. Dominic College of Asia. </p>
     </section>
     
     <section id="tech-stack">
