--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <header>
-        <img src="lee_pic.jpg" alt="Photo">
+        <img src="https://chat.google.com/u/0/api/get_attachment_url?url_type=FIFE_URL&content_type=image%2Fjpeg&attachment_token=AOo0EEUJwxpW%2FFFJsdQb3xyIZ0nYtNdBnmnOWQwqnyfXRwUugdozBrxqgmCMvKt1PsbLOMa%2BOcwfmHCMua70%2Bh3iyT4RTh39kh2uD306LDRzs6j1LpwV%2Fq4vOAm2X1Yn8XsY6eOfiX5LZ24rxBtcV%2F7LrOqqYF6ptKehtQ1rwa7PKvD3Be9PIGSLvTNjQAdq3KdID32wToP4BqYFIvEM9054%2B%2BziPcTEN2oyPYQ6ubTa%2FClMx5bHCimHrPVgFiz37vihjDI1%2BmSxcOtU3fBNB19vAX1PPQ6ONyGwU%2FU0YjDSekFdSyw3GWfmQW3pXcw4ajPgi40UQkaSxkzcQKUKX3c%2FDuOe110yLZJ1FWIuKfcPz4QhPN2TnpT48TAFNQ%2B1RL%2Bh%2BsGLN2wxWAMUL%2B%2FXVGTQqOVhZmZniANEgHW%2B%2BpQDPv%2FC774C71rjUdf1XuPlmXnyqTt0VuTHRbg7uYUxLELQR7nBPD3sPVv4E1O5odTTMGKHcA3BYQ9X7whf3LKHhJOzn0KoR1VITiNzM%2By5GtXkhn%2FLMoc2GZpHyXIpXNhhC16qbX1oev1ZSjRbf54raol%2BVZ6p&allow_caching=true&sz=w512" alt="Photo">
         <h1> Hi, I'm Lee Joshua Reyes </h1>
         <nav>
             <a href="#about" class="nav-button">About</a>
