moss green color

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             text-align: center;
         }
         header {
-            background-color: #333;
+            background-color: #8A9A5B;
             color: white;
             padding: 20px;
         }
@@ -29,7 +29,7 @@
             margin-top: 10px;
         }
         .nav-button {
-            background-color: #064915;
+            background-color: #555;
             color: white;
             padding: 10px 20px;
             margin: 5px;
@@ -61,7 +61,7 @@
             border-radius: 5px;
         }
         footer {
-            background: #064915;
+            background: #8A9A5B;
             color: white;
             padding: 10px;
             margin-top: 20px;
