--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             text-align: center;
         }
         header {
-            background-color: #8A9A5B;
+            background-color: #545454;
             color: white;
             padding: 20px;
         }
@@ -61,7 +61,7 @@
             border-radius: 5px;
         }
         footer {
-            background: #8A9A5B;
+            background: #545454;
             color: white;
             padding: 10px;
             margin-top: 20px;
