Add file extension to picture

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
     <header>
-        <img src="images/self-portrait" alt="Photo">
+        <img src="images/self-portrait.jpg" alt="Photo">
         <h1> Hi, I'm Lee Joshua Reyes </h1>
         <nav>
             <a href="#about" class="nav-button">About</a>
