--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
   </header>
 
   <p>
-    I'm a student of Bachelor of Science in Information Technology at St. Dominic College of Asia. I'm passionate about coding, technology, and learning new skills to become a great software developer.
+    I'm a student of Bachelhahahahaor of Science in Information Technology at St. Dominic College of Asia. I'm passionate about coding, technology, and learning new skills to become a great software developer.
   </p>
 
   <a href="index.html" class="nav-button">Home</a>
