--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tech Stack - Lee Joshua Reyes</title>
+  <title>Contact - Lee Joshua Reyes</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -66,21 +66,20 @@
     h2 {
       font-size: 2.5rem;
       color: #e86ffb;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
 
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-
-    li {
-      background-color: #222;
-      padding: 12px 20px;
-      margin: 10px 0;
-      border-radius: 8px;
+    p {
       font-size: 1.1rem;
-      font-weight: 500;
+      color: #ddd;
+      line-height: 1.6;
+    }
+
+    .email {
+      margin-top: 20px;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #fff;
     }
   </style>
 </head>
@@ -92,22 +91,16 @@
     </a>
     <nav>
       <a href="about.html">About</a>
-      <a href="techstack.html" class="active">Tech Stack</a>
+      <a href="techstack.html">Tech Stack</a>
       <a href="certification.html">Certifications</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" class="active">Contact</a>
     </nav>
   </header>
 
   <div class="container">
-    <h2>My Tech Stack</h2>
-    <ul>
-      <li>C Language</li>
-      <li>C++</li>
-      <li>Java</li>
-      <li>Git and GitHub</li>
-      <li>HTML Basics</li>
-      <li>CSS</li>
-    </ul>
+    <h2>Contact Me</h2>
+    <p>If you'd like to connect, collaborate, or just say hello, feel free to reach me out!</p>
+    <p class="email">Email: reyesleejoshua29@gmail.com</p>
   </div>
 
 </body>
