changed portfolio.html to index.html

--- a/email.html
+++ b/email.html
@@ -76,7 +76,7 @@
 </head>
 <body>
 
-  <a href="portfolio.html" class="back-logo">Lee Joshua Reyes</a>
+  <a href="index.html" class="back-logo">Lee Joshua Reyes</a>
 
   <form action="https://formspree.io/f/mblokdwk" method="POST">
     <h2>Send Me an Email</h2>
