--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
 <body>
 
   <header>
-    <a href="portfolio.html">
+    <a href="index.html">
       <div class="logo">Lee Joshua Reyes</div>
     </a>
     <nav>
