--- a/techstack.html
+++ b/techstack.html
@@ -87,7 +87,7 @@
 <body>
 
   <header>
-    <a href="portfolio.html">
+    <a href="index.html">
       <div class="logo">Lee Joshua Reyes</div>
     </a>
     <nav>
