--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Lee Joshua Reyes</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
@@ -27,6 +27,7 @@
 
     header {
       max-width: 700px;
+      width: 100%;
     }
 
     img {
@@ -122,6 +123,74 @@
 
     nav a:hover {
       color: #fff;
+    }
+
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      h2 {
+        font-size: 1rem;
+      }
+
+      p {
+        font-size: 0.95rem;
+      }
+
+      nav a {
+        font-size: 0.85rem;
+        margin: 0 6px;
+      }
+
+      footer {
+        font-size: 0.8rem;
+      }
+
+      img {
+        width: 150px;
+        height: 150px;
+      }
+
+      .shortcut {
+        padding: 4px 8px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      body {
+        padding: 10px;
+      }
+
+      h1 {
+        font-size: 1.8rem;
+      }
+
+      h2 {
+        font-size: 0.9rem;
+      }
+
+      p {
+        font-size: 0.85rem;
+      }
+
+      nav a {
+        font-size: 0.75rem;
+        margin: 0 4px;
+      }
+
+      footer {
+        font-size: 0.7rem;
+      }
+
+      img {
+        width: 120px;
+        height: 120px;
+      }
+
+      .shortcut {
+        padding: 4px 8px;
+      }
     }
   </style>
 </head>
